--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <style>body{margin:0;padding:0;}</style>
     <title>Titles List</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+        #root {
+            flex: 1;
+        }
+    </style>
 </head>
 <body>
     <div id="root"></div>
